examples/mood/tests/evaluate/enum_declaration_with_variant_value_unknown_type.mood.expected
Error: Unknown type: oops:
 --> enum_declaration_with_variant_value_unknown_type.mood:2:8

  | enum Maybe {
2 |   Some(oops),
  |        ^^^^ This type is not defined.
  |   None
